# weather-forecast-db-site

./: .dockerignore  .gitignore  .mailmap  Dockerfile  README.md  __init__.py  config.json  csv  docker-compose.yml  docker-run.sh  id.txt  main.py  pyproject.toml  지역코드.csv
backend/: main.py  pyproject.toml
backend/routers/: weather.py
backend/services/: csv_loader.py
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: korea-map.tsx
frontend/lib/: api.ts  csv.ts
nas-weather-data/: cookies.pkl
nas-weather-data/#recycle/: cookies.pkl  cookies_200609.pkl  cookies_200707.pkl  cookies_200715.pkl  cookies_202551.pkl  cookies_202603.pkl
nas-weather-data/단기예보/서울특별시/종로구/가회동/1시간강수량/: 가회동_1시간강수량_20240101_20240131.csv
nas-weather-data/단기예보/서울특별시/종로구/가회동/1시간기온/: 가회동_1시간기온_20240101_20240131.csv
nas-weather-data/단기예보/서울특별시/종로구/가회동/강수형태/: 가회동_강수형태_20240101_20240131.csv
nas-weather-data/단기예보/서울특별시/종로구/가회동/남북바람성분/: 가회동_남북바람성분_20240101_20240131.csv
src/: __init__.py  extract_loaction.py  forecaster.py  get_cookies.py  merge_region.py
src/scripts/: __init__.py  monitor_data.py  run_collection.py
src/utils/: __init__.py  cookies.py  region_extractor.py
src/weather_downloader/: __init__.py  config.py  downloader.py
tests/: __init__.py  test_downloader.py
일단대기코드/: monitor_data.py  monitor_data_new.py  run_collection.py  run_collection_new.py  test_download.py  weather_downloader.py
(+86 files in other folders)
